// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Rating component > should render the correct number of stars 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <!---->
  </rating>
  
</div>
`;

exports[`Rating component > should select the correct number of stars when value changes 1`] = `
<div>
  <rating
    class="flex cursor-pointer select-none"
    role="radiogroup"
    tabindex="0"
  >
    <!---->
     
    <rkt-icon
      aria-checked="true"
      aria-label="Rating 1 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="true"
      aria-label="Rating 2 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="true"
      aria-label="Rating 3 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="true"
      aria-label="Rating 4 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-filled"
      />
    </rkt-icon>
    <rkt-icon
      aria-checked="false"
      aria-label="Rating 5 out of 5"
      class="flex flex-shrink-0 items-center justify-center "
      role="option"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="rating-empty"
      />
    </rkt-icon>
    <!---->
  </rating>
  
</div>
`;
